--- a/app/src/main/res/layout/activity_update_profile.xml
+++ b/app/src/main/res/layout/activity_update_profile.xml
@@ -6,15 +6,28 @@
     android:orientation="vertical"
     tools:context="br.usp.ime.checkattendance.UpdateProfileActivity">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="20dp"
+        android:text="Name"/>
+
     <EditText
         android:id="@+id/et_name_edit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginTop="20dp"
-        android:focusable="false"
+        android:focusable="true"
         android:hint="Name" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="20dp"
+        android:text="NUSP"/>
 
     <EditText
         android:layout_width="match_parent"
@@ -25,6 +38,13 @@
         android:inputType="number"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="20dp"
+        android:text="Password"/>
 
     <EditText
         android:id="@+id/et_passwd_edit"
