add logout menu item in student home screen

--- a/app/src/main/res/menu/student_home.xml
+++ b/app/src/main/res/menu/student_home.xml
@@ -7,4 +7,10 @@
         app:showAsAction="never"
         android:orderInCategory="100"
         android:title="Edit Profile" />
+
+    <item
+        android:id="@+id/student_logout"
+        app:showAsAction="never"
+        android:orderInCategory="100"
+        android:title="Logout" />
 </menu>
