minor improvements in layouts
Improve card view layout e change some menu titles

--- a/app/src/main/res/menu/teacher_home.xml
+++ b/app/src/main/res/menu/teacher_home.xml
@@ -6,7 +6,7 @@
         android:id="@+id/item_edit_teacher"
         app:showAsAction="never"
         android:orderInCategory="100"
-        android:title="Edit Profile" />
+        android:title="Update Profile" />
 
     <item
         android:id="@+id/item_register_teacher"
