--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -8,9 +8,8 @@
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_margin="10dp"
-        android:layout_height="62dp"
-        card_view:cardCornerRadius="4dp"
-        card_view:elevation="14dp">
+        android:layout_height="100dp"
+        card_view:cardCornerRadius="4dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -20,26 +19,18 @@
                 android:id="@+id/iv_image"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="10dp"
                 android:src="@drawable/abc_btn_radio_material">
             </ImageView>
 
             <TextView
                 android:id="@+id/tv_text"
-
                 android:layout_toRightOf ="@+id/iv_image"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center" >
-            </TextView>
-
-            <TextView
-                android:id="@+id/tv_blah"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="blah blah blah......"
-                android:layout_below="@+id/tv_text"
-                android:layout_toRightOf="@+id/iv_image"
-                android:layout_toEndOf="@+id/iv_image">
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="10dp">
             </TextView>
 
         </RelativeLayout>
