--- a/app/src/main/res/menu/student_home.xml
+++ b/app/src/main/res/menu/student_home.xml
@@ -6,7 +6,7 @@
         android:id="@+id/student_edit_profile"
         app:showAsAction="never"
         android:orderInCategory="100"
-        android:title="Edit Profile" />
+        android:title="Update Profile" />
 
     <item
         android:id="@+id/student_logout"
