--- a/app/src/main/res/layout/fragment_seminars_teacher.xml
+++ b/app/src/main/res/layout/fragment_seminars_teacher.xml
@@ -12,4 +12,13 @@
         android:layout_alignParentStart="true">
     </android.support.v7.widget.RecyclerView>
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:src="@android:drawable/ic_input_add" />
+
 </RelativeLayout>
