--- a/app/src/main/res/layout/fragment_seminars_teacher.xml
+++ b/app/src/main/res/layout/fragment_seminars_teacher.xml
@@ -13,12 +13,13 @@
     </android.support.v7.widget.RecyclerView>
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/fab_create_seminar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:src="@android:drawable/ic_input_add" />
+        android:src="@android:drawable/ic_input_add"
+        android:onClick="createSeminar"/>
 
 </RelativeLayout>
