--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -9,7 +9,8 @@
         android:layout_width="match_parent"
         android:layout_margin="10dp"
         android:layout_height="100dp"
-        card_view:cardCornerRadius="4dp">
+        card_view:cardCornerRadius="4dp"
+        android:onClick="cardDetails">
 
         <RelativeLayout
             android:layout_width="match_parent"
