--- a/app/src/main/res/layout/seminar_detail_teacher.xml
+++ b/app/src/main/res/layout/seminar_detail_teacher.xml
@@ -18,7 +18,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textStyle="bold"
-        android:layout_margin="20dp" />
+        android:layout_margin="30dp"
+        android:layout_gravity="center"/>
 
     <ImageButton
         android:id="@+id/btn_edit_seminar"
