--- a/app/src/main/res/layout/seminar_detail_teacher.xml
+++ b/app/src/main/res/layout/seminar_detail_teacher.xml
@@ -21,12 +21,29 @@
         android:layout_margin="30dp"
         android:layout_gravity="center"/>
 
-    <ImageButton
-        android:id="@+id/btn_edit_seminar"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:src="@drawable/ic_mode_edit_black_24dp"
-        android:background="#ffffff" />
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btn_edit_seminar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:drawableLeft="@drawable/ic_mode_edit_black_24dp"
+            android:background="#ffffff"
+            android:text="Edit" />
+
+        <Button
+            android:id="@+id/btn_qr_code"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/ic_filter_center_focus_black_24dp"
+            android:layout_margin="20dp"
+            android:background="#ffffff"
+            android:text="QR code" />
+
+    </LinearLayout>
 
 </LinearLayout>
