--- a/app/src/main/res/layout/seminar_detail_teacher.xml
+++ b/app/src/main/res/layout/seminar_detail_teacher.xml
@@ -4,46 +4,34 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <ImageButton
-        android:id="@+id/btn_close"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        android:layout_margin="10dp"
-        android:src="@drawable/ic_close_black_24dp"
-        android:background="#ffffff"/>
-
-    <TextView
-        android:id="@+id/tv_seminar_name_details"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:layout_margin="30dp"
-        android:layout_gravity="center"/>
-
-    <LinearLayout
+    <Button
+        android:id="@+id/btn_qr_code_teacher"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:drawableLeft="@drawable/ic_filter_center_focus_black_24dp"
+        android:background="@color/colorAccent"
+        android:textColor="#ffffff"
+        android:layout_margin="10dp"
+        android:text="QR code" />
 
-        <Button
-            android:id="@+id/btn_edit_seminar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:drawableLeft="@drawable/ic_mode_edit_black_24dp"
-            android:background="#ffffff"
-            android:text="Edit" />
+    <Button
+        android:id="@+id/btn_bluetooth_teacher"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:drawableLeft="@drawable/ic_bluetooth_black_24dp"
+        android:background="@color/colorAccent"
+        android:textColor="#ffffff"
+        android:layout_margin="10dp"
+        android:text="Bluetooth" />
 
-        <Button
-            android:id="@+id/btn_qr_code"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/ic_filter_center_focus_black_24dp"
-            android:layout_margin="20dp"
-            android:background="#ffffff"
-            android:text="QR code" />
-
-    </LinearLayout>
+    <Button
+        android:id="@+id/btn_edit_seminar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:drawableLeft="@drawable/ic_mode_edit_black_24dp"
+        android:background="@color/colorAccent"
+        android:textColor="#ffffff"
+        android:layout_margin="10dp"
+        android:text="Edit" />
 
 </LinearLayout>
