use translatable strings in layouts

--- a/app/src/main/res/layout/activity_register_seminar.xml
+++ b/app/src/main/res/layout/activity_register_seminar.xml
@@ -14,12 +14,12 @@
         android:layout_marginRight="10dp"
         android:layout_marginTop="20dp"
         android:focusable="true"
-        android:hint="Name" />
+        android:hint="@string/name_hint" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Register"
+        android:text="@string/register"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="20dp"
         android:onClick="registerSeminar"/>
