--- a/app/src/main/res/layout/activity_bluetooth_device_list.xml
+++ b/app/src/main/res/layout/activity_bluetooth_device_list.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:background="@color/colorPrimaryDark"
         android:paddingLeft="5dp"
-        android:text="Paired Bluetooth Devices"
+        android:text="@string/bluetooth_paired_devices"
         android:textColor="#fff"
         />
 
@@ -28,7 +28,7 @@
         android:layout_height="wrap_content"
         android:background="@color/colorPrimaryDark"
         android:paddingLeft="5dp"
-        android:text="Other Bluetooth Devices"
+        android:text="@string/bluetooth_other_devices"
         android:textColor="#fff"
         />
 
@@ -48,6 +48,6 @@
         android:drawableLeft="@drawable/ic_bluetooth_searching_black_24dp"
         android:textColor="#ffffff"
         android:layout_margin="10dp"
-        android:text="Scan"
+        android:text="@string/bluetooth_scan"
         />
 </LinearLayout>
