--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -23,7 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/et_nusp"
-        android:hint="NUSP"
+        android:hint="@string/nusp_hint"
         android:focusable="true"
         android:inputType="number"
         android:layout_marginTop = "46dp"
@@ -36,7 +36,7 @@
         android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:ems="10"
-        android:hint="Password"
+        android:hint="@string/passwd_hint"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"/>
 
@@ -51,7 +51,7 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/register"
+            android:text="@string/register_login"
             android:background="@null"
             android:textColor="#0000FF"
             android:layout_marginRight="30dp"
@@ -60,7 +60,7 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Login"
+            android:text="@string/login"
             android:layout_marginLeft="50dp"
             android:onClick="login"/>
 
